--- a/ad_windows/inventaire.ini
+++ b/ad_windows/inventaire.ini
@@ -1,2 +1,4 @@
 [vpn]
 192.168.0.3 ansible_user=root ansible_ssh_pass=root ansible_ssh_common_args='-o StrictHostKeyChecking=no' samba_workgroup=MYWORKGROUP ad_domain=MAME.net
+[home_assitance]
+192.168.0.4 ansible_user=root ansible_ssh_pass=root ansible_ssh_common_args='-o StrictHostKeyChecking=no' samba_workgroup=MYWORKGROUP ad_domain=MAME.net
