--- a/ad_windows/home_assistant/dockerfile
+++ b/ad_windows/home_assistant/dockerfile
@@ -1,33 +1,26 @@
 FROM ubuntu:20.04
 
-# Met à jour le système et installe les outils nécessaires
+# Mettre à jour le système et installer les dépendances de base
 RUN apt-get update && apt-get install -y --no-install-recommends \
     openssh-server \
     python3 \
     python3-pip \
-    nano \
     curl \
-    iputils-ping \
+    sudo \
+    nano \
     dnsutils \
-    dbus \
-    software-properties-common && \
-    mkdir -p /var/run/sshd && \
-    echo 'root:root' | chpasswd && \
-    sed -i 's/#Port 22/Port 22/' /etc/ssh/sshd_config && \
-    sed -i 's/#PermitRootLogin prohibit-password/PermitRootLogin yes/' /etc/ssh/sshd_config && \
-    sed -i 's@UsePAM yes@UsePAM no@g' /etc/ssh/sshd_config && \
+    iputils-ping && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/*
 
-# Installe Home Assistant directement dans le conteneur
-RUN pip3 install wheel && \
-    pip3 install homeassistant
+# Configurer SSH
+RUN mkdir /var/run/sshd && \
+    echo 'root:root' | chpasswd && \
+    sed -i 's/#Port 22/Port 22/' /etc/ssh/sshd_config && \
+    sed -i 's/#PermitRootLogin prohibit-password/PermitRootLogin yes/' /etc/ssh/sshd_config
 
-# Crée un répertoire pour la configuration de Home Assistant
-RUN mkdir -p /opt/home_assistant/config
-
-# Expose les ports nécessaires pour SSH et Home Assistant
+# Exposer les ports
 EXPOSE 22 8123
 
-# Commande de démarrage pour démarrer SSH et Home Assistant
-CMD service ssh start && hass --config /opt/home_assistant/config
+# Commande de démarrage
+CMD service ssh start && tail -f /dev/null
