--- a/ad_windows/playbook.yml
+++ b/ad_windows/playbook.yml
@@ -323,6 +323,7 @@
       apt:
         name:
           - python3-dev
+          - python3.8-venv
           - build-essential
           - libffi-dev
           - libssl-dev
