--- a/ad_windows/playbook.yml
+++ b/ad_windows/playbook.yml
@@ -334,17 +334,33 @@
         state: present
 
     # Étape 2 : Préparer l'environnement virtuel pour Home Assistant
+        # Étape 2 : Préparer l'environnement virtuel pour Home Assistant
     - name: Créer l'environnement virtuel pour Home Assistant
       shell: python3 -m venv /srv/homeassistant
       args:
         executable: /bin/bash
 
-    - name: Installer les dépendances Python dans l'environnement virtuel
+    - name: Mettre à jour pip et setuptools dans l'environnement virtuel
       shell: |
-        source /srv/homeassistant/bin/activate && pip install --upgrade pip wheel homeassistant
+        source /srv/homeassistant/bin/activate && pip install --upgrade pip setuptools
       args:
         executable: /bin/bash
       become_user: homeassistant
+
+    - name: Installer wheel dans l'environnement virtuel
+      shell: |
+        source /srv/homeassistant/bin/activate && pip install wheel
+      args:
+        executable: /bin/bash
+      become_user: homeassistant
+
+    - name: Installer Home Assistant dans l'environnement virtuel
+      shell: |
+        source /srv/homeassistant/bin/activate && pip install homeassistant
+      args:
+        executable: /bin/bash
+      become_user: homeassistant
+
 
     # Étape 3 : Configurer les répertoires et fichiers de Home Assistant
     - name: Créer le répertoire de configuration pour Home Assistant
