--- a/ad_windows/playbook.yml
+++ b/ad_windows/playbook.yml
@@ -313,18 +313,19 @@
 
 ################################HOME ASSISTANT####################################################################################################################
 
-- name: Configurer la machine Home Assistant
+- name: Installer Home Assistant directement sur la machine
   hosts: home_assitance
   gather_facts: true
   become: true
 
   tasks:
-    # Étape 1 : Installer les paquets nécessaires
-    - name: Mettre à jour les paquets et installer les dépendances nécessaires pour Home Assistant
+    # Mise à jour des paquets et installation des dépendances nécessaires
+    - name: Mettre à jour les paquets et installer les dépendances
       apt:
         name:
+          - python3
+          - python3-pip
           - python3-dev
-          - python3.8-venv
           - build-essential
           - libffi-dev
           - libssl-dev
@@ -332,43 +333,28 @@
           - libxslt1-dev
           - zlib1g-dev
         state: present
+        update_cache: yes
 
-    # Étape 2 : Préparer l'environnement virtuel pour Home Assistant
-        # Étape 2 : Préparer l'environnement virtuel pour Home Assistant
-    - name: Créer l'environnement virtuel pour Home Assistant
-      shell: python3 -m venv /srv/homeassistant
-      args:
-        executable: /bin/bash
-
-    - name: Mettre à jour pip et setuptools dans l'environnement virtuel
+    # Mettre à jour pip et installer Home Assistant
+    - name: Mettre à jour pip
       shell: |
-        source /srv/homeassistant/bin/activate && pip install --upgrade pip setuptools
+        pip3 install --upgrade pip setuptools wheel
       args:
         executable: /bin/bash
-      become_user: homeassistant
 
-    - name: Installer wheel dans l'environnement virtuel
-      shell: |
-        source /srv/homeassistant/bin/activate && pip install wheel
-      args:
-        executable: /bin/bash
-      become_user: homeassistant
+    - name: Installer Home Assistant globalement
+      pip:
+        name: homeassistant
+        state: latest
+        executable: pip3
 
-    - name: Installer Home Assistant dans l'environnement virtuel
-      shell: |
-        source /srv/homeassistant/bin/activate && pip install homeassistant
-      args:
-        executable: /bin/bash
-      become_user: homeassistant
-
-
-    # Étape 3 : Configurer les répertoires et fichiers de Home Assistant
-    - name: Créer le répertoire de configuration pour Home Assistant
+    # Configuration de Home Assistant
+    - name: Créer le répertoire de configuration de Home Assistant
       file:
         path: /srv/homeassistant/config
         state: directory
-        owner: homeassistant
-        group: homeassistant
+        owner: root
+        group: root
         mode: '0755'
 
     - name: Ajouter le fichier configuration.yaml
@@ -386,11 +372,11 @@
               action:
                 - service: light.turn_on
                   entity_id: light.living_room
-        owner: homeassistant
-        group: homeassistant
+        owner: root
+        group: root
         mode: '0644'
 
-    # Étape 4 : Configurer le service systemd pour Home Assistant
+    # Créer un service systemd pour démarrer Home Assistant
     - name: Créer un fichier systemd pour Home Assistant
       copy:
         dest: /etc/systemd/system/home-assistant.service
@@ -401,8 +387,8 @@
 
           [Service]
           Type=simple
-          User=homeassistant
-          ExecStart=/srv/homeassistant/bin/hass -c /srv/homeassistant/config
+          User=root
+          ExecStart=/usr/local/bin/hass -c /srv/homeassistant/config
 
           [Install]
           WantedBy=multi-user.target
