--- a/ad_windows/home_assistant/dockerfile
+++ b/ad_windows/home_assistant/dockerfile
@@ -11,6 +11,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     dnsutils \
     iputils-ping && \
     apt-get clean && \
+    pip install hass-nabucasa &&\
     rm -rf /var/lib/apt/lists/*
 
 # Configurer SSH
