--- a/ad_windows/playbook.yml
+++ b/ad_windows/playbook.yml
@@ -326,6 +326,8 @@
           - python3
           - python3-pip
           - python3-dev
+          - python3.9-venv
+          - python3.9-distutils
           - build-essential
           - libffi-dev
           - libssl-dev
