--- a/ad_windows/playbook.yml
+++ b/ad_windows/playbook.yml
@@ -383,11 +383,15 @@
         mode: '0644'
       become: true
 
+
+    - name: Reconfigurer le paquet ssh
+      command: ssh-keygen -f '/root/.ssh/known_hosts' -R '192.168.0.4'
+
     - name: Redémarrer docker
       service:
         use : service
         name: docker
-        state: started
+        state: restarted
 
     - name: Lancer Home Assistant dans Docker si Docker n'est pas déjà en cours d'exécution
       docker_container:
