--- a/ad_windows/playbook.yml
+++ b/ad_windows/playbook.yml
@@ -363,60 +363,60 @@
 
 
 
-    - name: Ajouter le fichier configuration.yaml
-      copy:
-        dest: /srv/homeassistant/config/configuration.yaml
-        content: |
-          homeassistant:
-            name: "Smart Home"
-          default_config:
-          automation:
-            - alias: "Turn on lights at sunset"
-              trigger:
-                - platform: sun
-                  event: sunset
-              action:
-                - service: light.turn_on
-                  entity_id: light.living_room
-        owner: homeassistant
-        group: homeassistant
-        mode: '0644'
-      become: true
+    # - name: Ajouter le fichier configuration.yaml
+    #   copy:
+    #     dest: /srv/homeassistant/config/configuration.yaml
+    #     content: |
+    #       homeassistant:
+    #         name: "Smart Home"
+    #       default_config:
+    #       automation:
+    #         - alias: "Turn on lights at sunset"
+    #           trigger:
+    #             - platform: sun
+    #               event: sunset
+    #           action:
+    #             - service: light.turn_on
+    #               entity_id: light.living_room
+    #     owner: homeassistant
+    #     group: homeassistant
+    #     mode: '0644'
+    #   become: true
 
 
-    - name: Reconfigurer le paquet ssh
-      command: ssh-keygen -f '/root/.ssh/known_hosts' -R '192.168.0.4'
+    # - name: Reconfigurer le paquet ssh
+    #   command: ssh-keygen -f '/root/.ssh/known_hosts' -R '192.168.0.4'
 
-    - name: Redémarrer docker
-      service:
-        use : service
-        name: docker
-        state: restarted
+    # - name: Redémarrer docker
+    #   service:
+    #     use : service
+    #     name: docker
+    #     state: restarted
 
-    - name: Lancer Home Assistant dans Docker si Docker n'est pas déjà en cours d'exécution
-      docker_container:
-        name: home_assistant
-        image: homeassistant/home-assistant:stable
-        state: started
-        restart_policy: always
-        ports:
-          - "8123:8123"
-        volumes:
-          - /srv/homeassistant/config:/config
-        networks:
-          - homeassistant_network
-      become: true
+    # - name: Lancer Home Assistant dans Docker si Docker n'est pas déjà en cours d'exécution
+    #   docker_container:
+    #     name: home_assistant
+    #     image: homeassistant/home-assistant:stable
+    #     state: started
+    #     restart_policy: always
+    #     ports:
+    #       - "8123:8123"
+    #     volumes:
+    #       - /srv/homeassistant/config:/config
+    #     networks:
+    #       - homeassistant_network
+    #   become: true
 
-    - name: Créer un réseau Docker si nécessaire
-      docker_network:
-        name: homeassistant_network
-        state: present
-      become: true
+    # - name: Créer un réseau Docker si nécessaire
+    #   docker_network:
+    #     name: homeassistant_network
+    #     state: present
+    #   become: true
 
-    - name: Démarrer Home Assistant directement sans systemd
-      shell: |
-        nohup hass -c /srv/homeassistant/config > /var/log/homeassistant.log 2>&1 &
-      args:
-        executable: /bin/bash
-      become: true
+    # - name: Démarrer Home Assistant directement sans systemd
+    #   shell: |
+    #     nohup hass -c /srv/homeassistant/config > /var/log/homeassistant.log 2>&1 &
+    #   args:
+    #     executable: /bin/bash
+    #   become: true
 
