--- a/ad_windows/playbook.yml
+++ b/ad_windows/playbook.yml
@@ -313,110 +313,110 @@
 
 ################################HOME ASSISTANT####################################################################################################################
 
-- name: Configurer la machine Home Assistant avec Docker
-  hosts: home_assitance
-  gather_facts: true
-  become: true
+# - name: Configurer la machine Home Assistant avec Docker
+#   hosts: home_assistance
+#   gather_facts: true
+#   become: true
 
-  tasks:
-    - name: Mettre à jour les paquets et installer Docker si nécessaire
-      apt:
-        name:
-          - docker.io
-          - python3-dev
-          - python3-pip
-          - build-essential
-          - libffi-dev
-          - libssl-dev
-          - libxml2-dev
-          - libxslt1-dev
-          - zlib1g-dev
-        state: present
-      become: true
+#   tasks:
+#     - name: Mettre à jour les paquets et installer Docker si nécessaire
+#       apt:
+#         name:
+#           - docker.io
+#           - python3-dev
+#           - python3-pip
+#           - build-essential
+#           - libffi-dev
+#           - libssl-dev
+#           - libxml2-dev
+#           - libxslt1-dev
+#           - zlib1g-dev
+#         state: present
+#       become: true
 
-    - name: Installer Home Assistant avec pip
-      shell: |
-        pip3 install --upgrade homeassistant
-      become: true
+#     - name: Installer Home Assistant avec pip
+#       shell: |
+#         pip3 install --upgrade homeassistant
+#       become: true
 
-    - name: Créer le groupe homeassistant
-      group:
-        name: homeassistant
-        state: present
-      become: true
+#     - name: Créer le groupe homeassistant
+#       group:
+#         name: homeassistant
+#         state: present
+#       become: true
 
-    - name: Créer l'utilisateur homeassistant
-      user:
-        name: homeassistant
-        group: homeassistant
-        create_home: yes
-      become: true
+#     - name: Créer l'utilisateur homeassistant
+#       user:
+#         name: homeassistant
+#         group: homeassistant
+#         create_home: yes
+#       become: true
 
-    - name: Créer un répertoire de configuration pour Home Assistant
-      file:
-        path: /srv/homeassistant/config
-        state: directory
-        owner: homeassistant
-        group: homeassistant
-        mode: '0755'
-      become: true
-
-
-
-    - name: Ajouter le fichier configuration.yaml
-      copy:
-        dest: /srv/homeassistant/config/configuration.yaml
-        content: |
-          homeassistant:
-            name: "Smart Home"
-          default_config:
-          automation:
-            - alias: "Turn on lights at sunset"
-              trigger:
-                - platform: sun
-                  event: sunset
-              action:
-                - service: light.turn_on
-                  entity_id: light.living_room
-        owner: homeassistant
-        group: homeassistant
-        mode: '0644'
-      become: true
+#     - name: Créer un répertoire de configuration pour Home Assistant
+#       file:
+#         path: /srv/homeassistant/config
+#         state: directory
+#         owner: homeassistant
+#         group: homeassistant
+#         mode: '0755'
+#       become: true
 
 
-    # - name: Reconfigurer le paquet ssh
-    #   command: ssh-keygen -f '/root/.ssh/known_hosts' -R '192.168.0.4'
 
-    - name: Redémarrer docker
-      service:
-        use : service
-        name: docker
-        state: restarted
+#     - name: Ajouter le fichier configuration.yaml
+#       copy:
+#         dest: /srv/homeassistant/config/configuration.yaml
+#         content: |
+#           homeassistant:
+#             name: "Smart Home"
+#           default_config:
+#           automation:
+#             - alias: "Turn on lights at sunset"
+#               trigger:
+#                 - platform: sun
+#                   event: sunset
+#               action:
+#                 - service: light.turn_on
+#                   entity_id: light.living_room
+#         owner: homeassistant
+#         group: homeassistant
+#         mode: '0644'
+#       become: true
 
-    - name: Lancer Home Assistant dans Docker si Docker n'est pas déjà en cours d'exécution
-      docker_container:
-        name: home_assistant
-        image: homeassistant/home-assistant:stable
-        state: started
-        restart_policy: always
-        ports:
-          - "8123:8123"
-        volumes:
-          - /srv/homeassistant/config:/config
-        networks:
-          - homeassistant_network
-      become: true
 
-    - name: Créer un réseau Docker si nécessaire
-      docker_network:
-        name: homeassistant_network
-        state: present
-      become: true
+#     - name: Reconfigurer le paquet ssh
+#       command: ssh-keygen -f
 
-    - name: Démarrer Home Assistant directement sans systemd
-      shell: |
-        nohup hass -c /srv/homeassistant/config > /var/log/homeassistant.log 2>&1 &
-      args:
-        executable: /bin/bash
-      become: true
+#     - name: Redémarrer docker
+#       service:
+#         use : service
+#         name: docker
+#         state: restarted
+
+#     - name: Lancer Home Assistant dans Docker si Docker n'est pas déjà en cours d'exécution
+#       docker_container:
+#         name: home_assistant
+#         image: homeassistant/home-assistant:stable
+#         state: started
+#         restart_policy: always
+#         ports:
+#           - "8123:8123"
+#         volumes:
+#           - /srv/homeassistant/config:/config
+#         networks:
+#           - homeassistant_network
+#       become: true
+
+#     - name: Créer un réseau Docker si nécessaire
+#       docker_network:
+#         name: homeassistant_network
+#         state: present
+#       become: true
+
+#     - name: Démarrer Home Assistant directement sans systemd
+#       shell: |
+#         nohup hass -c /srv/homeassistant/config > /var/log/homeassistant.log 2>&1 &
+#       args:
+#         executable: /bin/bash
+#       become: true
 
