--- a/ad_windows/playbook.yml
+++ b/ad_windows/playbook.yml
@@ -313,26 +313,26 @@
 
 ################################HOME ASSISTANT####################################################################################################################
 
-# - name: Configurer la machine Home Assistant avec Docker
-#   hosts: home_assistance
-#   gather_facts: true
-#   become: true
+- name: Configurer la machine Home Assistant avec Docker
+  hosts: home_assistance
+  gather_facts: true
+  become: true
 
-#   tasks:
-#     - name: Mettre à jour les paquets et installer Docker si nécessaire
-#       apt:
-#         name:
-#           - docker.io
-#           - python3-dev
-#           - python3-pip
-#           - build-essential
-#           - libffi-dev
-#           - libssl-dev
-#           - libxml2-dev
-#           - libxslt1-dev
-#           - zlib1g-dev
-#         state: present
-#       become: true
+  tasks:
+    - name: Mettre à jour les paquets et installer Docker si nécessaire
+      apt:
+        name:
+          - docker.io
+          - python3-dev
+          - python3-pip
+          - build-essential
+          - libffi-dev
+          - libssl-dev
+          - libxml2-dev
+          - libxslt1-dev
+          - zlib1g-dev
+        state: present
+      become: true
 
 #     - name: Installer Home Assistant avec pip
 #       shell: |
